# xnotid

./: Cargo.toml  LICENSE  README.md  xnotid.service
src/: config.rs  dbus_server.rs  default.css  main.rs  notification.rs  store.rs  tray.rs  ui.rs
