[package]
name = "xnotid"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
dirs = "6.0.0"
env_logger = "0.11.9"
gdk4 = "0.10.3"
gio2 = { version = "0.21.5", package = "gio" }
glib2 = { version = "0.21.5", package = "glib" }
gtk4 = { version = "0.10.3", features = ["v4_12"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.21.0", features = ["v4"] }
x11rb = "0.13.2"
zbus = { version = "5.13.2", features = ["tokio"] }
